--- a/src/main/resources/com/ostrichemulators/prevent/preferences.fxml
+++ b/src/main/resources/com/ostrichemulators/prevent/preferences.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
@@ -12,13 +13,12 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-
-<BorderPane xmlns="http://javafx.com/javafx/11.0.1" prefHeight="350" prefWidth="600" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ostrichemulators.prevent.PreferencesController">
+<BorderPane prefHeight="350" prefWidth="600" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ostrichemulators.prevent.PreferencesController">
    <center>
-      <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350" prefWidth="600">
+      <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="350" prefWidth="836.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="452.0" minWidth="10.0" prefWidth="273.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="671.0" minWidth="10.0" prefWidth="645.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="452.0" minWidth="10.0" prefWidth="279.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="671.0" minWidth="10.0" prefWidth="557.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -39,7 +39,7 @@
             <Label text="Remove Docker Containers on Success" GridPane.rowIndex="4" />
             <Label text="Output Directory" GridPane.rowIndex="6" />
             <Label text="Log Directory" GridPane.rowIndex="7" />
-            <FlowPane hgap="25.0" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
+            <FlowPane hgap="25.0" maxHeight="16.0" GridPane.columnIndex="1">
                <children>
                   <RadioButton fx:id="nativeconverter" mnemonicParsing="false" selected="true" text="Native">
                      <toggleGroup>
@@ -56,9 +56,9 @@
             <Spinner fx:id="durationtimer" editable="true" prefHeight="26.0" prefWidth="148.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
             <GridPane hgap="5.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
                <columnConstraints>
-                  <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="452.0" />
-                  <ColumnConstraints maxWidth="431.0" minWidth="10.0" prefWidth="74.0" />
-                  <ColumnConstraints maxWidth="224.0" minWidth="10.0" prefWidth="90.0" />
+                  <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="300.0" />
+                  <ColumnConstraints maxWidth="1.7976931348623157E308" minWidth="10.0" />
+                  <ColumnConstraints maxWidth="1.7976931348623157E308" minWidth="10.0" />
                </columnConstraints>
                <rowConstraints>
                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
@@ -66,21 +66,24 @@
                <children>
                   <Button mnemonicParsing="false" onAction="#setOutputFromInput" text="From Input" GridPane.columnIndex="2" />
                   <Button mnemonicParsing="false" onAction="#selectOutputDir" text="Choose" GridPane.columnIndex="1" />
-                  <Label fx:id="outputlbl" maxWidth="1.7976931348623157E308" prefHeight="16.0" prefWidth="58.0" GridPane.hgrow="ALWAYS" />
+                  <Label fx:id="outputlbl" maxWidth="1.7976931348623157E308" prefHeight="16.0" GridPane.hgrow="ALWAYS" />
                </children>
             </GridPane>
-            <GridPane GridPane.columnIndex="1" GridPane.rowIndex="7">
+            <GridPane hgap="5.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
                <columnConstraints>
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="540.0" minWidth="10.0" prefWidth="474.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="328.0" minWidth="10.0" prefWidth="171.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="300.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="1.7976931348623157E308" minWidth="10.0" />
                </columnConstraints>
                <rowConstraints>
                   <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <Label fx:id="loglbl" maxWidth="1.7976931348623157E308" prefHeight="16.0" prefWidth="56.0" />
-                  <Button mnemonicParsing="false" onAction="#selectLogDir" prefHeight="26.0" prefWidth="67.0" text="Choose" GridPane.columnIndex="1" />
+                  <Label fx:id="loglbl" maxWidth="1.7976931348623157E308" />
+                  <Button mnemonicParsing="false" onAction="#selectLogDir" text="Choose" GridPane.columnIndex="1" />
                </children>
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
             </GridPane>
          </children>
       </GridPane>
